k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qorvia-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 80
          - path: /reviews
            pathType: Prefix
            backend:
              service:
                name: blog-feedback-service
                port:
                  number: 80
          - path: /report
            pathType: Prefix
            backend:
              service:
                name: blog-feedback-service
                port:
                  number: 80
          - path: /communication
            pathType: Prefix
            backend:
              service:
                name: communication-service
                port:
                  number: 80
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: event-management-service
                port:
                  number: 80
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
          - path: /payout-policy
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
